# x-plane-command-aliases-plugin

./: CMakeLists.txt  LICENSE  README.md  plugin.cpp
